<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME!</string>
    <string name="para_one">This app will provide you with weather details according to users, please login with your credentials.</string>
    <string name="para_two">Please enter your Email Address and Password below</string>
    <string name="login">Login</string>
    <string name="login_heading">LOG IN</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="user_list">User List</string>
    <string name="oops">Oops! Seems like users are not added yet. Add User from + icon from top right corner.</string>
    <string name="test_test">test test</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="add_user_detail">Add User Detail</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="add_user">Add User</string>
    <string name="delete">Delete</string>
    <string name="surety">Are you sure you want to delete this user data?</string>
    <string name="logout">Logout</string>
    <string name="weather_data">Weather Data</string>
    <string name="weather">Weather</string>
</resources>